# agentic-harness-engineering

./: .gitignore  pyproject.toml
agents/evolve_agent/middleware/context_compaction/compact_stratigies/: sliding_window.py
agents/evolve_agent/skills/agent-debugger-cli/_source/: pyproject.toml
configs/experiments/: exp-deepseek-v4-docker-regex.yaml  exp-deepseek-v4-smoke.yaml
docker/ahe-bench-sample-runtime/: Dockerfile
docker/ahe-runtime/: Dockerfile
scripts/: build_bench_sample_runtime.sh  build_docker_runtime.sh
